# libutil

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.mak
src/: Makefile  singleton.h  string_helper.h
test/: CMakeLists.txt  Makefile  singleton_test.cpp  string_helper_test.cpp  utest.cpp
util/: exception.h
